// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HealthScoreWidget > スナップショット > スコア30・全員危険ステータスの状態 1`] = `
<DocumentFragment>
  <div
    class="animate-fade-in-up stagger-1 rounded-xl border border-l-4 border-l-destructive bg-card p-5"
  >
    <div
      class="flex items-start justify-between mb-4"
    >
      <div>
        <p
          class="text-xs font-medium text-muted-foreground uppercase tracking-wider mb-1"
        >
          1on1 健全性スコア
        </p>
        <div
          class="flex items-baseline gap-1"
        >
          <span
            class="text-4xl font-bold tracking-tight text-destructive"
            data-testid="health-score-value"
          >
            30
          </span>
          <span
            class="text-sm font-normal text-muted-foreground"
          >
            %
          </span>
        </div>
      </div>
      <div
        class="flex gap-2"
      >
        <div
          class="flex flex-col items-center px-3 py-2 rounded-lg bg-success/10"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-check w-4 h-4 text-success"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m9 12 2 2 4-4"
              />
            </svg>
          </span>
          <span
            class="text-lg font-bold text-success"
          >
            0
          </span>
          <span
            class="text-xs text-foreground"
          >
            健全
          </span>
        </div>
        <div
          class="flex flex-col items-center px-3 py-2 rounded-lg bg-warning/10"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-triangle-alert w-4 h-4 text-warning"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </span>
          <span
            class="text-lg font-bold text-warning"
          >
            0
          </span>
          <span
            class="text-xs text-foreground"
          >
            注意
          </span>
        </div>
        <div
          class="flex flex-col items-center px-3 py-2 rounded-lg bg-destructive/10"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-x w-4 h-4 text-destructive"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m15 9-6 6"
              />
              <path
                d="m9 9 6 6"
              />
            </svg>
          </span>
          <span
            class="text-lg font-bold text-destructive"
          >
            2
          </span>
          <span
            class="text-xs text-foreground"
          >
            危険
          </span>
        </div>
      </div>
    </div>
    <div
      aria-label="メンバーの健全性状態一覧"
      class="mt-2 max-h-48 overflow-y-auto"
      role="region"
      tabindex="0"
    >
      <div
        class="flex items-center justify-between py-2 border-b border-border/50 last:border-0"
      >
        <div
          class="flex items-center gap-2 min-w-0"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-x w-4 h-4 text-destructive"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m15 9-6 6"
              />
              <path
                d="m9 9 6 6"
              />
            </svg>
          </span>
          <span
            class="text-sm text-foreground truncate"
          >
            山田 太郎
          </span>
        </div>
        <span
          aria-label="ステータス: 危険"
          class="text-xs font-medium px-2 py-0.5 rounded-full border shrink-0 bg-destructive/10 text-foreground border-destructive/30"
        >
          危険
        </span>
      </div>
      <div
        class="flex items-center justify-between py-2 border-b border-border/50 last:border-0"
      >
        <div
          class="flex items-center gap-2 min-w-0"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-x w-4 h-4 text-destructive"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m15 9-6 6"
              />
              <path
                d="m9 9 6 6"
              />
            </svg>
          </span>
          <span
            class="text-sm text-foreground truncate"
          >
            伊藤 三郎
          </span>
        </div>
        <span
          aria-label="ステータス: 危険"
          class="text-xs font-medium px-2 py-0.5 rounded-full border shrink-0 bg-destructive/10 text-foreground border-destructive/30"
        >
          危険
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HealthScoreWidget > スナップショット > スコア50・複数メンバー（健全・注意・危険混在）の状態 1`] = `
<DocumentFragment>
  <div
    class="animate-fade-in-up stagger-1 rounded-xl border border-l-4 border-l-warning bg-card p-5"
  >
    <div
      class="flex items-start justify-between mb-4"
    >
      <div>
        <p
          class="text-xs font-medium text-muted-foreground uppercase tracking-wider mb-1"
        >
          1on1 健全性スコア
        </p>
        <div
          class="flex items-baseline gap-1"
        >
          <span
            class="text-4xl font-bold tracking-tight text-warning"
            data-testid="health-score-value"
          >
            50
          </span>
          <span
            class="text-sm font-normal text-muted-foreground"
          >
            %
          </span>
        </div>
      </div>
      <div
        class="flex gap-2"
      >
        <div
          class="flex flex-col items-center px-3 py-2 rounded-lg bg-success/10"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-check w-4 h-4 text-success"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m9 12 2 2 4-4"
              />
            </svg>
          </span>
          <span
            class="text-lg font-bold text-success"
          >
            2
          </span>
          <span
            class="text-xs text-foreground"
          >
            健全
          </span>
        </div>
        <div
          class="flex flex-col items-center px-3 py-2 rounded-lg bg-warning/10"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-triangle-alert w-4 h-4 text-warning"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </span>
          <span
            class="text-lg font-bold text-warning"
          >
            1
          </span>
          <span
            class="text-xs text-foreground"
          >
            注意
          </span>
        </div>
        <div
          class="flex flex-col items-center px-3 py-2 rounded-lg bg-destructive/10"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-x w-4 h-4 text-destructive"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m15 9-6 6"
              />
              <path
                d="m9 9 6 6"
              />
            </svg>
          </span>
          <span
            class="text-lg font-bold text-destructive"
          >
            1
          </span>
          <span
            class="text-xs text-foreground"
          >
            危険
          </span>
        </div>
      </div>
    </div>
    <div
      aria-label="メンバーの健全性状態一覧"
      class="mt-2 max-h-48 overflow-y-auto"
      role="region"
      tabindex="0"
    >
      <div
        class="flex items-center justify-between py-2 border-b border-border/50 last:border-0"
      >
        <div
          class="flex items-center gap-2 min-w-0"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-check w-4 h-4 text-success"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m9 12 2 2 4-4"
              />
            </svg>
          </span>
          <span
            class="text-sm text-foreground truncate"
          >
            田中 一郎
          </span>
        </div>
        <span
          aria-label="ステータス: 健全"
          class="text-xs font-medium px-2 py-0.5 rounded-full border shrink-0 bg-success/10 text-foreground border-success/30"
        >
          健全
        </span>
      </div>
      <div
        class="flex items-center justify-between py-2 border-b border-border/50 last:border-0"
      >
        <div
          class="flex items-center gap-2 min-w-0"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-triangle-alert w-4 h-4 text-warning"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </span>
          <span
            class="text-sm text-foreground truncate"
          >
            佐藤 花子
          </span>
        </div>
        <span
          aria-label="ステータス: 注意"
          class="text-xs font-medium px-2 py-0.5 rounded-full border shrink-0 bg-warning/10 text-foreground border-warning/30"
        >
          注意
        </span>
      </div>
      <div
        class="flex items-center justify-between py-2 border-b border-border/50 last:border-0"
      >
        <div
          class="flex items-center gap-2 min-w-0"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-x w-4 h-4 text-destructive"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m15 9-6 6"
              />
              <path
                d="m9 9 6 6"
              />
            </svg>
          </span>
          <span
            class="text-sm text-foreground truncate"
          >
            鈴木 次郎
          </span>
        </div>
        <span
          aria-label="ステータス: 危険"
          class="text-xs font-medium px-2 py-0.5 rounded-full border shrink-0 bg-destructive/10 text-foreground border-destructive/30"
        >
          危険
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HealthScoreWidget > スナップショット > スコア100・メンバーなしのデフォルト状態 1`] = `
<DocumentFragment>
  <div
    class="animate-fade-in-up stagger-1 rounded-xl border border-l-4 border-l-success bg-card p-5"
  >
    <div
      class="flex items-start justify-between mb-4"
    >
      <div>
        <p
          class="text-xs font-medium text-muted-foreground uppercase tracking-wider mb-1"
        >
          1on1 健全性スコア
        </p>
        <div
          class="flex items-baseline gap-1"
        >
          <span
            class="text-4xl font-bold tracking-tight text-success"
            data-testid="health-score-value"
          >
            100
          </span>
          <span
            class="text-sm font-normal text-muted-foreground"
          >
            %
          </span>
        </div>
      </div>
      <div
        class="flex gap-2"
      >
        <div
          class="flex flex-col items-center px-3 py-2 rounded-lg bg-success/10"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-check w-4 h-4 text-success"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m9 12 2 2 4-4"
              />
            </svg>
          </span>
          <span
            class="text-lg font-bold text-success"
          >
            0
          </span>
          <span
            class="text-xs text-foreground"
          >
            健全
          </span>
        </div>
        <div
          class="flex flex-col items-center px-3 py-2 rounded-lg bg-warning/10"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-triangle-alert w-4 h-4 text-warning"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </span>
          <span
            class="text-lg font-bold text-warning"
          >
            0
          </span>
          <span
            class="text-xs text-foreground"
          >
            注意
          </span>
        </div>
        <div
          class="flex flex-col items-center px-3 py-2 rounded-lg bg-destructive/10"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-x w-4 h-4 text-destructive"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m15 9-6 6"
              />
              <path
                d="m9 9 6 6"
              />
            </svg>
          </span>
          <span
            class="text-lg font-bold text-destructive"
          >
            0
          </span>
          <span
            class="text-xs text-foreground"
          >
            危険
          </span>
        </div>
      </div>
    </div>
    <p
      class="text-sm text-muted-foreground"
    >
      メンバーが登録されていません
    </p>
  </div>
</DocumentFragment>
`;
